--- a/_site.yml
+++ b/_site.yml
@@ -5,8 +5,8 @@ navbar:
   left:
     - text: "Home"
       href: index.html
-    - text: "About"
-      href: about.html
+    - text: "Resume"
+      href: Resume.html
 
 output:
   html_document:
